--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
+		"predeploy": "npm run duild",
+		"deploy": "gh-pages -d dist",
 		"build": "tsc -b && vite build",
 		"lint": "eslint .",
 		"preview": "vite preview"
@@ -17,7 +19,8 @@
 		"react-slick": "^0.30.2",
 		"sass": "^1.79.4",
 		"slick-carousel": "^1.8.1",
-		"swiper": "^11.1.14"
+		"swiper": "^11.1.14",
+		"vite-plugin-svgr": "^4.2.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.11.1",
@@ -27,6 +30,7 @@
 		"eslint": "^9.11.1",
 		"eslint-plugin-react-hooks": "^5.1.0-rc.0",
 		"eslint-plugin-react-refresh": "^0.4.12",
+		"gh-pages": "^6.1.1",
 		"globals": "^15.9.0",
 		"typescript": "^5.5.3",
 		"typescript-eslint": "^8.7.0",
