--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
-		"predeploy": "npm run duild",
+		"predeploy": "npm run build",
 		"deploy": "gh-pages -d dist",
 		"build": "tsc -b && vite build",
 		"lint": "eslint .",
